# pelican-syntax-highlighting

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  package.json  pyproject.toml  render.js  tasks.py
.github/workflows/: main.yml
pelican/plugins/syntax_highlighting/: __init__.py  markdown_extension.py  settings.py  syntax_highlighting.py
