[tool.poetry]
authors = ["Fabian Köhler <fabian.koehler@protonmail.ch>"]
description = "Highlight syntax using Prism.js, Highlight.js or Pygments"
documentation = "https://docs.getpelican.com"
keywords = ["pelican", "plugin"]
license = "AGPL-3.0"
name = "pelican-syntax-highlighting"
packages = [{include = "pelican"}]
readme = "README.md"
repository = "https://github.com/f-koehler/pelican-syntax-highlighting"
version = "0.4.2"

classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Framework :: Pelican",
  "Framework :: Pelican :: Plugins",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/f-koehler/pelican-syntax-highlighting/issues"

[tool.poetry.dependencies]
markdown = {version = ">=3.2", optional = true}
pelican = ">=4.5"
python = ">=3.10,<4.0"

[tool.poetry.dev-dependencies]
Werkzeug = "^2.0"
black = {version = "^23.1", allow-prereleases = true}
flake8 = "^6.0"
flake8-black = "^0.3"
invoke = "^2.0"
isort = "^5.4"
livereload = "^2.6"
markdown = "^3.2"
mypy = "^1.0"
pre-commit = "^3.0.0"
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-pythonpath = "^0.7"
pytest-sugar = "^0.9"
types-Markdown = "^3.3.6"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
append-github-contributor = true
git-email = "botpub@autopub.rocks"
git-username = "botpub"
project-name = "Syntax Highlighting"

[tool.isort]
# Maintain compatibility with Black
multi_line_output = 3
profile = "black"

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" as separate import section
known_pelican = "pelican"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
